--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
     </div>
 
     <div class="controls">
-        <span class="vid-btn active" data-src="images2/Konark.mp4"></span>
-        <span class="vid-btn" data-src="images2/Hanuman Jhula.mp4"></span>
-        <span class="vid-btn" data-src="images2/Mathura.mp4"></span>
-        <span class="vid-btn" data-src="images2/Benaras.mp4"></span>
+        <span class="vid-btn active" data-src="Konark.mp4"></span>
+        <span class="vid-btn" data-src="Hanuman Jhula.mp4"></span>
+        <span class="vid-btn" data-src="Mathura.mp4"></span>
+        <span class="vid-btn" data-src="Benaras.mp4"></span>
     </div>
 
     <div class="video-container">
-        <video src="images2/Konark.mp4" id="video-slider" loop autoplay muted></video>
+        <video src="Konark.mp4" id="video-slider" loop autoplay muted></video>
     </div>
 
 </section>
@@ -110,7 +110,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="images2/book.png.png" alt="">
+            <img src="book.png.png" alt="">
         </div>
 
         <form action="">
@@ -156,7 +156,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images2/kedarnath.png" alt="">
+            <img src="kedarnath.png" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i> Kedarnath </h3>
                 <p>Kedarnath is a Hindu temple, one of the twelve jyotirlinga of Shiva. The temple is located on the Garhwal Himalayan range</p>
@@ -173,7 +173,7 @@
         </div>
 
         <div class="box">
-            <img src="images2/badrinath.png" alt="">
+            <img src="badrinath.png" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i>Badrinath </h3>
                 <p> Badrinath is a Hindu holy place, and is one of the four sites in India's Char Dham pilgrimage. </p>
@@ -190,7 +190,7 @@
         </div>
 
         <div class="box">
-            <img src="images2/rameswaram-temple.png" alt="">
+            <img src="rameswaram-temple.png" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i> Rameshawaram </h3>
                 <p>Ramanathaswamy Temple (Rāmanātasvāmi Kōyil) is a Hindu temple dedicated to the Hindu god Shiva located on Rameswaram island in the state of Tamil Nadu, India.</p>
@@ -207,7 +207,7 @@
         </div>
 
         <div class="box">
-            <img src="images2/jagannath.png" alt="">
+            <img src="jagannath.png" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i> Jagannath Puri </h3>
                 <p>The Jagannath Temple is an important Hindu temple dedicated to Jagannath, a form of Vishnu – one of the trinity of supreme divinity in Hinduism.</p>
@@ -224,7 +224,7 @@
         </div>
 
         <div class="box">
-            <img src="images2/mathura.jpg" alt="">
+            <img src="mathura.jpg" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i> Vrindavan </h3>
                 <p>Vrindavan is considered to be a sacred place for Vaisnavism tradition of Hinduism.It is believed that Krishna spent part of his childhood in this city.</p>
@@ -241,7 +241,7 @@
         </div>
 
         <div class="box">
-            <img src="images2/Dwarkadhish.jpg" alt="">
+            <img src="Dwarkadhish.jpg" alt="">
             <div class="content">
                 <h3> <i class="fas fa-map-marker-alt"></i> Dwarkadhish </h3>
                 <p>The Dwarkadhish temple, also known as the Jagat Mandir and occasionally spelled Dwarakadheesh, is a Hindu temple dedicated to Krishna, who is worshiped here by the name Dwarkadhish, or 'King of Dwarka'.</p>
@@ -334,7 +334,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images2/premmandir.jpg" alt="">
+            <img src="premmandir.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>PREM MANDIR,MATHURA</p>
@@ -342,7 +342,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/suntemple.jpg" alt="">
+            <img src="suntemple.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Sun Temple,Orissa</p>
@@ -350,7 +350,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/gopuram.jpg" alt="">
+            <img src="gopuram.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Gopuram</p>
@@ -358,7 +358,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/adiyogi.jpg" alt="">
+            <img src="adiyogi.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Adiyogi,Konnur</p>
@@ -366,7 +366,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/amritsar.jpg" alt="">
+            <img src="amritsar.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Golden Temple,Amritsar</p>
@@ -374,7 +374,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/holi.jpg" alt="">
+            <img src="holi.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Lath Holi, Vrindavan</p>
@@ -382,7 +382,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/yamunotri.png" alt="">
+            <img src="yamunotri.png" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Yamunotri</p>
@@ -390,7 +390,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images2/mandir.jpg" alt="">
+            <img src="mandir.jpg" alt="">
             <div class="content">
                 <h3>Amazing places</h3>
                 <p>Beautiful Temple</p>
@@ -422,7 +422,7 @@
 
             <div class="swiper-slide">
                 <div class="box">
-                    <img src="images2/pic1.png" alt="">
+                    <img src="pic1.png" alt="">
                     <h3>john deo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                     <div class="stars">
@@ -436,7 +436,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="box">
-                    <img src="images2/pic2.png" alt="">
+                    <img src="pic2.png" alt="">
                     <h3>john deo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                     <div class="stars">
@@ -450,7 +450,7 @@
             </div>
             <div class="swiper-slide">
                 <div class="box">
-                    <img src="images2/pic3.png" alt="">
+                    <img src="pic3.png" alt="">
                     <h3>john deo</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa adipisci quisquam sunt nesciunt fugiat odit minus illum asperiores dolorum enim sint quod ipsam distinctio molestias consectetur ducimus beatae, reprehenderit exercitationem!</p>
                     <div class="stars">
@@ -489,7 +489,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="images2/contact-img.svg" alt="">
+            <img src="contact-img.svg" alt="">
         </div>
 
         <form action="">
